@@ -2,6 +2,9 @@ $Id$
 
 2017-11-04  Christian Franke  <franke@computer.org>
 
+	smartctl.8.in, smartd.conf.5.in: Shorten or remove info about
+	very old 3ware controllers.
+
 	smartctl.8.in: Add '-g' to '-x' documentation.
 	Avoid a very long line.
 
